<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_tipslogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textBillAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/labelBillAmt"
                android:text="@string/labelBillAmt"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textTipPercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/labelTipPercent"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editBillInput"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/labelBillInput"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/tipDropDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:entries="@array/tip_selection"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelPeople"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/peopleSlider"
                style="@android:style/Widget.Material.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:max="14"
                android:progress="0" />

            <TextView
                android:id="@+id/textPeopleValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="5"
                android:text="@string/labelPeopleSlider"
                android:textAlignment="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTipAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/labelTipAmt"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textTipValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="5"
                android:text="@string/labelNotCalculated"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textBillTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/labelBillTotal"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textBillValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/labelNotCalculated"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTotalPerPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/labelTotalPerPerson"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textPerPersonValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/labelNotCalculated"
                android:textAlignment="textEnd" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>