<resources>
    <string-array name="tip_selection">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
    </string-array>
    <string name="app_name">Tip \'n Split</string>
    <string name="labelBillAmt">Amount due</string>
    <string name="labelTipPercent">Percent to tip</string>
    <string name="labelPeople">Number of people</string>
    <string name="labelTipAmt">Amount to tip</string>
    <string name="labelTotalPerPerson">Total per person</string>
    <string name="labelBillTotal">Total to pay</string>
    <string name="labelBillInput">$24.98</string>
    <string name="labelTipInput">15%</string>
    <string name="labelPeopleSlider">1</string>
    <string name="labelNotCalculated">$0.00</string>
</resources>
